# self-healing-router

./: .gitignore  README.md  pyproject.toml
examples/: api_gateway.py  customer_support.py  data_pipeline.py  dependency_dag.py  ecommerce_checkout.py  linear_pipeline.py  microservices.py  parallel_fanout.py  with_llm_escalation.py
src/self_healing_router/: __init__.py  escalation.py  graph.py  monitor.py  priority.py  router.py  types.py
tests/: test_circuit_breaker.py  test_composite_weight.py  test_escalation.py  test_graph.py  test_monitor.py  test_observability.py  test_priority.py  test_router.py
