[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-healing-router"
version = "0.1.0"
description = "Graph-based self-healing tool routing for LLM agents. 93% fewer LLM calls than ReAct."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jonathan Hammant", email = "jhammant@gmail.com" },
]
keywords = ["llm", "agents", "routing", "tools", "self-healing", "dijkstra", "cost-reduction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/jhammant/self-healing-router"
Issues = "https://github.com/jhammant/self-healing-router/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
